# Haskell-project

./: .gitignore  README.md  Report.md  vercel.json
backend/: Api.hs  Main.hs  Recursive.hs  Types.hs  crop-analytics.cabal
frontend/: charts.js  dashboard.js  index.html  styles.css
