name:                crop-analytics
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable backend-server
  main-is:             Main.hs
  other-modules:       Api, Types, Recursive
  build-depends:       base >= 4.7 && < 5,
                       scotty,
                       aeson,
                       text,
                       wai-cors
  default-language:    Haskell2010
